--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,31 @@ uuid = "92342fc8-b7c5-4df7-a50a-a2043b6089c6"
 authors = ["brendanjohnharris <bhar9988@uni.sydney.edu.au> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+BIDSTools = "5c32dcf8-0cad-11ea-129f-5f4ce150df4b"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+Catch22 = "acdeb78f-3d39-4310-8fdf-6d75c17c6d5a"
+CatchaMouse16 = "d380ff4f-f00a-4d7d-8e8f-cf8a6193eec9"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
+DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+EDF = "ccffbfc1-f56e-50fb-a33b-53d1781b2825"
+MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+TimeseriesFeatures = "f3112013-b923-4dfa-b867-8806c885f823"
+TimeseriesTools = "380cddd1-6ef2-46ca-b087-e7151fb095ff"
+
 [compat]
-julia = "1.9"
+BIDSTools = "0.1.2"
+CairoMakie = "0.12.17"
+Catch22 = "0.7"
+CatchaMouse16 = "0.3.0"
+DataFrames = "1.7.0"
+DimensionalData = "0.29.4"
+DrWatson = "2.18.0"
+EDF = "0.7.5"
+MultivariateStats = "0.10.3"
+StatsBase = "0.34.4"
+TimeseriesFeatures = "0.6"
+TimeseriesTools = "0.6"
+julia = "1.10"
